k8s/backend-deployment.yaml
# k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: urbanmart-backend
  namespace: urbanmart-dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: urbanmart-backend
  template:
    metadata:
      labels:
        app: urbanmart-backend
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
      containers:
        - name: backend
          image: ghcr.io/chiranjibipaikaray/urbanmart-backend:latest
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
