k8s/backend-service.yaml
# k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: urbanmart-backend
  namespace: urbanmart-dev
spec:
  selector:
    app: urbanmart-backend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
